styles/index.css
@font-face {
  font-family: "Halloween";
  src: url("../assets/fonts/MonsterPumpkin-MVBzP.ttf");
}
* {
  margin: 0;
  text-decoration: none;
  box-sizing: border-box;
}
body {
  background-color: #06050a;
  display: flex;
  align-items: center;
  justify-content: center;
  height: 100vh;
  position: relative;
}
h1 {
  font-family: "Halloween", sans-serif;
  position: absolute;
  color: #42800a;
  text-shadow: 5px 5px 10px #b5efaf, -5px -5px 10px #b5efaf;
  font-size: 84px;
  top: 40%;
  animation: vibrate infinite linear 1s;
  backface-visibility: hidden;
}
.happy {
  left: 30px;
}
.halloween {
  right: 30px;
}
.pumpkin {
  background-color: #e1631d;
  height: 250px;
  width: 300px;
  position: relative;
  border-radius: 50%;
  box-shadow: 20px 5px 50px 10px #d65417, -20px -5px 50px 10px #d65417,
    40px 10px 100px 20px #a42e08, -40px -2px 100px 20px #a42e08,
    inset 4px 4px 20px 4px #fddb9a, inset -4px -4px 20px 8px #bd1c0f;
  animation: vibrate infinite linear 1s;
  backface-visibility: hidden;
}
.pumpkin-eye,
.pumpkin-mouth,
.pumpkin-nose,
.pumpkin-teeth {
  position: absolute;
  background-color: #30152a;
}
.pumpkin-eye {
  height: 50px;
  width: 70px;
  top: 20%;
}
.pumpkin-eye-1 {
  left: 20%;
  border-radius: 42% 58% 0% 100% / 68% 89% 11% 32%;
  box-shadow: -2px -2px 30px #feb960, 2px 2px 30px #feb960,
    inset 10px 5px #7f2524, inset 10px -5px #7f2524, inset 12px -6px 5px #4b0b0d,
    inset 12px 6px 5px #4b0b0d;
}
/* I used fancy border lines for the pumpkin eyes https://9elements.github.io/fancy-border-radius/ */
/* https://github.com/9elements/fancy-border-radius */
.pumpkin-eye-2 {
  right: 20%;
  border-radius: 69% 31% 100% 0% / 87% 71% 29% 13%;
  box-shadow: -2px -2px 30px #feb960, 2px 2px 30px #feb960,
    inset -10px -5px #7f2524, inset -10px -5px #7f2524,
    inset -12px -6px 5px #4b0b0d, inset -12px -6px 5px #4b0b0d;
}
.pumpkin-nose {
  top: 40%;
  right: 50%;
  height: 40px;
  width: 40px;
  box-shadow: -2px -2px 30px #feb960, 2px 2px 30px #feb960,
    inset -4px -2px #7f2524, inset -6px -3px 5px #4b0b0d;
  border-radius: 5px;
  transform: translateX(50%);
  clip-path: polygon(50% 0%, 0% 100%, 100% 100%);
}
.pumpkin-mouth {
  bottom: 30px;
  height: 60px;
  width: 180px;
  left: 50%;
  transform: translateX(-50%);
  border-bottom-right-radius: 300px 200px;
  border-bottom-left-radius: 300px 200px;
  box-shadow: inset 5px 5px #7f2524, inset -5px -5px #7f2524;
}
.pumpkin-teeth {
  background-color: #e1631d;
  height: 20px;
  width: 25px;
  bottom: 45px;
  border-radius: 5px;
  right: 70%;
}
.pumpkin-teeth-1 {
  right: 20%;
  box-shadow: 2px 2px #7f2524;
}
.pumpkin-teeth-2 {
  box-shadow: 2px 2px #7f2524;
}
.pumpkin-teeth-3 {
  bottom: 2px;
  right: 20%;
  box-shadow: -2px -2px #7f2524;
}
.pumpkin-teeth-4 {
  bottom: 2px;
  box-shadow: 2px -2px #7f2524;
}

/* Images styles */
img {
  position: absolute;
  backface-visibility: hidden;
}

.hand,
.basket,
.skeleton,
.bat {
  z-index: 100;
}
.basket {
  left: 30%;
  top: -48%;
  animation: basket-out ease-in-out 3s, float infinite linear 5.2s;
}
.hand {
  bottom: -50%;
  left: 40%;
  animation: hand-out ease-in-out 3s, float infinite linear 5.2s;
}
.bat {
  left: -40%;
  top: 20%;
  animation: bat-out ease-in-out 3s, float infinite linear 5.2s;
}
.candy {
  top: -20%;
  right: -30%;
  animation: candy-out ease-in-out 3s, float infinite linear 3s;
}
.cat {
  right: -30%;
  bottom: -40%;
  animation: cat-out ease-in-out 3s, float infinite linear 5s;
}
.witch {
  right: -30%;
  bottom: 30%;
  animation: witch-out ease-in-out 3s, float infinite linear 6s;
}
.ghost {
  left: -30%;
  bottom: -20%;
  animation: ghost-out ease-in-out 3s, float infinite linear 4.4s;
}
.skeleton {
  left: -30%;
  top: -40%;
  animation: skeleton-out ease-in-out 3s, float infinite linear 3.2s;
}
footer {
  position: absolute;
  bottom: 0;
  color: #b5efaf;
}
footer a {
  color: #42800a;
  font-size: 28px;
  font-family: "Halloween";
  text-decoration: underline;
}
@keyframes vibrate {
  0% {
    transform: translateY(0px);
    transform: translateX(0px);
  }
  50% {
    transform: translateY(1px);
    transform: translateX(1px);
  }
  100% {
    transform: translateY(0px);
    transform: translateX(0px);
  }
}

@keyframes float {
  0% {
    transform: translateY(0px);
  }
  50% {
    transform: translateY(5px);
  }
  100% {
    transform: translateY(0px);
  }
}
@keyframes smile {
  0% {
    transform: translateY(0px);
  }
  25% {
    transform: translateY(5px);
  }
  50% {
    transform: translateY(0px);
  }
  75% {
    transform: translateY(5px);
  }
  100% {
    transform: translateY(0px);
  }
}
@keyframes skeleton-out {
  0% {
    left: 44%;
    top: 40%;
    opacity: 0.1;
  }
  80% {
    left: -35%;
    top: -45%;
    opacity: 0.5;
  }
  100% {
    left: -30%;
    top: -40%;
    opacity: 1;
  }
}
@keyframes candy-out {
  0% {
    opacity: 0.1;
    right: 40%;
    top: 40%;
  }
  80% {
    opacity: 0.5;
    right: -35%;
    top: -25%;
  }
  100% {
    opacity: 1;
    top: -20%;
    right: -30%;
  }
}
@keyframes cat-out {
  0% {
    opacity: 0.1;
    right: 40%;
    bottom: 40%;
  }
  80% {
    opacity: 0.5;
    right: -35%;
    bottom: -45%;
  }
  100% {
    opacity: 1;
    right: -30%;
    bottom: -40%;
  }
}
@keyframes bat-out {
  0% {
    opacity: 0.1;
    left: 44%;
    top: 40%;
  }
  80% {
    opacity: 0.5;
    left: -45%;
    top: 15%;
  }
  100% {
    opacity: 1;
    left: -40%;
    top: 20%;
  }
}
@keyframes basket-out {
  0% {
    opacity: 0.1;
    top: 40%;
  }
  80% {
    opacity: 0.5;
    top: -53%;
  }
  100% {
    opacity: 1;
    top: -48%;
  }
}
@keyframes ghost-out {
  0% {
    opacity: 0.1;
    left: 44%;
    bottom: 40%;
  }
  80% {
    opacity: 0.5;
    left: -35%;
    bottom: -25%;
  }
  100% {
    opacity: 1;
    left: -30%;
    bottom: -20%;
  }
}
@keyframes witch-out {
  0% {
    opacity: 0.1;

    right: 40%;
    bottom: 40%;
  }
  80% {
    opacity: 0.5;
    right: -35%;
    bottom: 25%;
  }
  100% {
    opacity: 1;
    right: -30%;
    bottom: 30%;
  }
}
@keyframes hand-out {
  0% {
    opacity: 0.1;
    bottom: 40%;
  }
  80% {
    opacity: 0.5;
    bottom: -55%;
  }
  100% {
    opacity: 1;
    bottom: -50%;
  }
}
@media (max-width: 480px) {
  h1 {
    font-size: 64px;
  }
  .happy {
    top: 10px;
    left: 5px;
  }
  .halloween {
    top: 10px;
    right: -7px;
  }
  .skeleton {
    left: -15%;
    width: 100px;
    height: 94px;
  }
  .candy {
    right: -16%;
  }
  .bat {
    left: -30px;
  }
  .ghost {
    left: -15%;
  }
  .cat {
    right: -16%;
  }
  .witch {
    right: -16%;
  }

  .hand,
  .basket,
  .skeleton,
  .bat,
  .ghost,
  .candy,
  .witch,
  .cat {
    animation: float infinite linear 4.4s;
  }
}
@media (min-width: 481px) and (max-width: 920px) {
  .happy,
  .halloween {
    top: 10%;
    font-size: 84px;
  }
}

